--- a/main.css
+++ b/main.css
@@ -19,16 +19,56 @@ body{
 header{
     height:300px;
     width:100%;
+    margin:0 auto;
     padding-top:100px;
     padding-left:auto;
     padding-right:auto;
 }
 h1{
     text-align: center;
+    width: 370px;
+    margin:0 auto;
+    font-size: 70px;
+    font-weight:1000;
+    text-transform: uppercase;
+    color:#f2f3f7;
+    -webkit-text-stroke: 0.3px  ;
+}
+h1::before{
+    content:attr(data-text);
+    position:absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
+    top:200px;
+    width: 0px;
+    height:100px;
+    color:#ec4646;
+    -webkit-text-stroke: 0vw #f2f3f7 ;
+    border-right: 2px solid #ec4646;
+    overflow:hidden;
+    animation: animate 6s;
+    animation-fill-mode:forwards;
 }
 
-.button{
-
+@keyframes animate
+{
+    0%,10%
+    {
+        width:0;
+    }
+    69%
+    {
+        width: 270px;
+        border-right: 2px solid #ec4646;
+    }
+    70%,100%
+    {
+        width:270px;
+        border:none;
+    }
 }
 button{
     margin:auto;
@@ -58,3 +98,25 @@ button:active{
                 inset 2px -2px 12px rgba(255,255,255,0.1),
                 inset 2px 2px 8px rgba(0,0,0,0.15);
 }
+
+.hide{
+    display:none;
+}
+
+.show{
+    display:block;
+}
+
+
+.glitch {
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 60px;
+
+    text-shadow: 0.04em 0 0 rgba(255,0,0,.75),
+                 -0.02em -0.04em 0 rgba(0,255,0,.75),
+                 0.02em 0.04em 0 rgba(0,0,255,.75);
+    
+    
+}
+
